--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     position: relative;
     width: 350px;
     /*height: 190px;*/
-    height: 450px;
+    height: 580px;
     background: #fff;
     border-radius: 20px;
     box-shadow: 0px 35px 80px rgba(0,0,0,0.15);
@@ -27,7 +27,7 @@ body {
 }
 
 .card:hover {
-    height: 450px;
+    height: 580px;
 }
 
 .imgBx {
@@ -73,16 +73,19 @@ body {
     width: 100%;
     transition: 0.5s;
 }
+.card .content .details h1 {
+    color: #C90303;
+}
 
 .card .content .details h2 {
     font-size: 1.25em;
     font-weight: 600;
-    color: #555;
     line-height: 1.2em;
 }
 
-.card .content .details h2 span {
+.card .content .details  span {
+    color: black;
     font-size: 0.75em;
     font-weight: 500;
-    opacity: 0.5;
+    
 }
