--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 
 .card {
     position: relative;
-    width: 350px;
+    width: 360px;
     /*height: 190px;*/
     height: 580px;
     background: #fff;
@@ -75,17 +76,35 @@ body {
 }
 .card .content .details h1 {
     color: #C90303;
+   font-weight: bold;
+   font-size: 35px;
 }
 
-.card .content .details h2 {
-    font-size: 1.25em;
-    font-weight: 600;
-    line-height: 1.2em;
+.card .content .details ul li {
+    list-style: none;
+    text-align: justify;
 }
 
-.card .content .details  span {
-    color: black;
-    font-size: 0.75em;
-    font-weight: 500;
+.card .content .details p {
+    text-align: justify;
+    font-size: 0.9em;
+}
+
+.card button {
+    position: relative;
+    align-items: center;
+    width: 50%;
+    padding: 3px;
+    border-radius: 5px;
+    background: #C90303;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    cursor: pointer;
     
+
 }
+
+
+    
