--- a/style.css
+++ b/style.css
@@ -12,16 +12,15 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(45deg, #fbda61, #ff5acd);
+    background: linear-gradient(45deg, #4E576A, #1A1D23);
     
 }
 
 .card {
     position: relative;
     width: 360px;
-    /*height: 190px;*/
-    height: 580px;
-    background: #fff;
+    height: 190px;
+    background:#C6D2CB;
     border-radius: 20px;
     box-shadow: 0px 35px 80px rgba(0,0,0,0.15);
     transition: 0.5s;
@@ -46,8 +45,8 @@ body {
 }
 
 .card:hover .imgBx {
-    width: 250px;
-    height: 250px;
+    width: 240px;
+    height: 240px;
 }
 
 .imgBx img {
@@ -66,6 +65,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    overflow: hidden;
 }
 
 .card .content .details {
@@ -73,7 +73,13 @@ body {
     text-align: center;
     width: 100%;
     transition: 0.5s;
+    transform: translateY(320px);
 }
+
+.card:hover .content .details {
+    transform: translateY(0px);
+}
+
 .card .content .details h1 {
     color: #C90303;
    font-weight: bold;
@@ -102,8 +108,7 @@ body {
     letter-spacing: 1px;
     font-weight: bold;
     cursor: pointer;
-    
-
+    border: none;
 }
 
 
